# tarea-3-k_x

./: README.md  benchmark.cpp  biquad.cpp  biquad.h  cascade.cpp  cascade.h  filter_client.cpp  filter_client.h  main.cpp  meson.build
filter_design/: butter_bandpass.mat  butter_highpass.mat  butter_lowpass.mat  butter_stopband.mat  cheby1_bandpass.mat  cheby1_highpass.mat  cheby1_lowpass.mat  cheby1_stopband.mat  cheby2_bandpass.mat  cheby2_highpass.mat  cheby2_lowpass.mat  cheby2_stopband.mat  design_filters.m  ellip_bandpass.mat  ellip_highpass.mat  ellip_lowpass.mat  ellip_stopband.mat  listen_filter.m  normalizer.m  octave-workspace  viewfreqresp.m
pruebas_octave/: pseudo_parallel_test.m  unrrolling_paralelizacion.m
